# wav2vec2-rs

./: .gitignore  BENCHMARKS.md  Cargo.toml  FLS_alignment_root_cause.md  README.md  current-failing-tests.txt  sonar-project.properties  wav2vec2aligner-main.perf-monitoring.patch
.github/workflows/: ci.yml  gpu-manual.yml  prepare-benchmark-assets.yml  publish-crate-manual.yml
alignment-explorer/: index.html  package-lock.json  package.json  vite.config.ts
alignment-explorer/src/: App.tsx
alignment-explorer/src/context/: CorpusContext.tsx
alignment-explorer/src/features/audio-detail/: AudioDetail.tsx  useWaveSurfer.ts
alignment-explorer/src/features/comparison/: aggregateStats.ts  compare.ts
alignment-explorer/src/features/corpus/: groupFiles.ts
alignment-explorer/src/features/dashboard/: Dashboard.tsx  ImportScreen.tsx
alignment-explorer/src/features/import/: directoryPicker.ts  fileListToRefs.ts  runCorpusWorker.ts
alignment-explorer/src/features/textgrid/: parseTextGrid.ts
alignment-explorer/src/shared/: math.ts  types.ts  utils.ts
alignment-explorer/src/stubs/: worker_threads.ts
alignment-explorer/src/workers/: corpusWorker.ts
alignment-report/: README.md  index.html  package-lock.json  package.json
alignment-report/public/reports/: env-run-2.json  env-run-3.json
alignment-report/src/: App.tsx
alignment-report/src/components/: ChartWithFullscreen.tsx  FileUpload.tsx  Filters.tsx  Glossary.tsx  Layout.tsx  MetricTooltip.tsx  RunList.tsx
alignment-report/src/context/: ReportContext.tsx
alignment-report/src/lib/: aggregate.ts  perfMetrics.ts  reportLoader.ts
alignment-report/src/pages/: Compare.tsx  Overview.tsx  PerformanceDashboard.tsx  SentenceDetail.tsx  Sentences.tsx
alignment-report/src/types/: report.ts
examples/: build_default.rs  custom_builder_components.rs
githooks/: README.md  pre-commit
obsidian/: .manifest.json  index.md  log.md
obsidian/.obsidian/: workspace.json
obsidian/concepts/: french-phoneme-ctc-grouping.md
obsidian/projects/: wav2vec2-rs.md
obsidian/projects/wav2vec2-rs/: roadmap.md
obsidian/projects/wav2vec2-rs/concepts/: builder-component-architecture.md  ctc-viterbi-backends.md  forced-alignment-pipeline.md  model-runtimes.md  reports-and-benchmarks.md  tokenization-and-word-grouping.md
obsidian/projects/wav2vec2-rs/references/: fp16-onnx-cuda-incident.md
obsidian/references/: cursor-conversation-import.md
obsidian/skills/: exporting-wav2vec2-ctc-models-to-onnx.md
scripts/: compare_textgrids.py  convert_voxpopuli_to_librispeech_layout.py  export_ctc_model_to_onnx.py  export_hf_to_librispeech_layout.py  pytorch_aligner.py  rebuild_qmd_cuda.ps1  requirements.txt  run_alignment_tests_from_file.py  wav2vec2aligner_librispeech_textgrids.py
src/: config.rs  error.rs  lib.rs  types.rs
src/alignment/: audio_boundaries.rs  grouping.rs  mod.rs  report.rs  tokenization.rs  viterbi.rs
src/alignment/cuda/: viterbi.cu  viterbi_cuda.rs
src/alignment/gpu/: viterbi.wgsl  viterbi_gpu.rs
src/alignment/grouping/: blank_expansion.rs  candidate_selector.rs  mod.rs  path_to_words.rs  tests.rs
src/model/: ctc_model.rs  encoder.rs  feature_extractor.rs  feature_projection.rs  layers.rs  mod.rs
src/pipeline/: builder.rs  cuda_forward.rs  defaults.rs  memory_tracker.rs  mod.rs  model_runtime.rs  runtime.rs  traits.rs
tests/: alignment_reference.rs
