[package]
name = "wav2vec2-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "0.9.1"
candle-nn = "0.9.1"
safetensors = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
claxon = { version = "0.4.3", optional = true }
textgrid = { version = "0.1.0", optional = true }
indicatif = { version = "0.17", optional = true }
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "load-dynamic"], optional = true }

[features]
default = []
cuda = ["candle-core/cuda"]
report-cli = ["dep:chrono", "dep:clap", "dep:claxon", "dep:textgrid", "dep:indicatif"]
onnx = ["dep:ort"]

[[bin]]
name = "alignment_report"
path = "src/bin/alignment_report.rs"
required-features = ["report-cli"]
