[package]
name = "wav2vec2-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "0.9.1"
candle-nn = "0.9.1"
safetensors = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
claxon = { version = "0.4.3", optional = true }
textgrid = { version = "0.1.0", optional = true }
indicatif = { version = "0.17", optional = true }

ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "load-dynamic", "download-binaries", "copy-dylibs", "tls-native"], optional = true }
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
cudarc = { version = "0.19.3", features = ["nvrtc", "cuda-version-from-build-system"], optional = true }
libc = { version = "0.2", optional = true }
windows-sys = { version = "0.52", optional = true, features = ["Win32_System_ProcessStatus", "Win32_Foundation", "Win32_System_Threading", "Win32_System_LibraryLoader"] }

[features]
default = []
# Enables Instant-based timing in group_into_words_profiled. When disabled, timing
# calls are no-ops optimized away, so align() has zero profiling overhead.
alignment-profiling = ["dep:libc", "dep:windows-sys"]
report-cli = ["dep:chrono", "dep:clap", "dep:claxon", "dep:textgrid", "dep:indicatif"]
onnx = ["dep:ort"]
gpu-dp = ["wgpu", "pollster", "bytemuck"]
cuda-dp = ["cudarc"]
full-gpu = ["onnx", "gpu-dp"]

[[bin]]
name = "alignment_report"
path = "src/bin/alignment_report.rs"
# alignment-profiling enables Instant-based timing for --perf-out; omit for zero overhead.
required-features = ["report-cli"]
