[package]
name = "wav2vec2-rs"
version = "0.1.0"
edition = "2021"
description = "Rust wav2vec2 CTC forced alignment with CPU, wgpu, and CUDA backends."
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/Djoe-Denne/wav2vec2-rs"
homepage = "https://github.com/Djoe-Denne/wav2vec2-rs"
documentation = "https://docs.rs/wav2vec2-rs"
keywords = ["wav2vec2", "ctc", "forced-alignment", "speech", "asr"]
categories = ["algorithms", "multimedia::audio", "command-line-utilities"]

[dependencies]
candle-core = "0.10.2"
candle-nn = "0.10.2"
safetensors = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
claxon = { version = "0.4.3", optional = true }
textgrid = { version = "0.1.0", optional = true }
indicatif = { version = "0.17", optional = true }

ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "load-dynamic", "download-binaries", "copy-dylibs", "tls-native"], optional = true }
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
cudarc = { version = "0.19.4", features = ["nvrtc", "cuda-version-from-build-system"], optional = true }
libc = { version = "0.2", optional = true }
windows-sys = { version = "0.52", optional = true, features = ["Win32_System_ProcessStatus", "Win32_Foundation", "Win32_System_Threading", "Win32_System_LibraryLoader"] }

[features]
default = []

# Runtime backends. Candle CPU is the baseline because candle-core/candle-nn
# are required dependencies; the feature exists as an explicit build selector.
candle-cpu = []
candle-cuda = ["candle-core/cuda", "candle-nn/cuda"]
candle-gpu = ["candle-cuda"]

onnx = ["dep:ort"]
onnx-cpu = ["onnx"]
onnx-cuda = ["onnx"]
onnx-cuda-dp = ["onnx-cuda", "cuda-dp"]
onnx-gpu = ["onnx-cuda-dp"]

# Viterbi/DP acceleration backends. These are independent from model runtime
# selection, except for onnx-cuda-dp which keeps ORT CUDA output on device.
wgpu-dp = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
cuda-dp = ["dep:cudarc"]
gpu-dp = ["wgpu-dp", "cuda-dp"]

# CLI/reporting features.
report-cli = ["dep:chrono", "dep:clap", "dep:claxon", "dep:textgrid", "dep:indicatif"]

# Enables Instant-based timing in group_into_words_profiled. When disabled,
# timing calls are no-ops optimized away, so align() has zero profiling overhead.
alignment-profiling = ["dep:libc", "dep:windows-sys"]

# Convenience bundles.
full-gpu = ["candle-gpu", "onnx-gpu", "gpu-dp"]

[[bin]]
name = "alignment_report"
path = "src/bin/alignment_report.rs"
# alignment-profiling enables Instant-based timing for --perf-out; omit for zero overhead.
required-features = ["report-cli"]
